--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section id="description">
-        <p id="description-title">
+        <p class="title">
             Hello, World!
         </p>
 
@@ -37,19 +37,42 @@
             insbesondere der persönliche Erfahrungsaustausch, organisiert in informellen Treffen, Diskussion von
             Erfahrungsberichten und Case Studies bis hin zu Vorträge und Workshops. Diese werden auch über Twitter
             <a href="https://twitter.com/dt_muc">@dt_muc</a> bekannt gegeben. Detaillierte Information über vergangene
-            Veranstaltungen findet ihr in unserem <a href="#">Wiki</a>.
+            Veranstaltungen findet ihr in unserem <a href="https://dt-muc.atlassian.net">Wiki</a>.
         </p>
 
-        <p id="organisation">
+        <p class="organisation">
             Die Design Thinking München Gruppe wird organisiert von
         </p>
+
+        <div class="organisation">
+            <div class="organizer">
+                <img src="avatar-gerhard.png">
+
+                <div class="organizer-info">
+                    <span class="important-info">Gerhard Müller</span><br>
+                    <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
+                    <a href="mailto:gerhard.mueller@tngtech.com">gerhard.mueller@tngtech.com</a><br>
+                    <a href="https://twitter.com/gmtng">@gmtng</a>
+                </div>
+            </div>
+            <div class="organizer">
+                <img src="avatar-taewon.png">
+
+                <div class="organizer-info">
+                    <span class="important-info">Tae Won Ha</span><br>
+                    <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
+                    <a href="mailto:taewon.ha@tngtech.com">taewon.ha@tngtech.com</a><br>
+                    <a href="https://twitter.com/hataewon">@hataewon</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="footer">
         <div id="footer-content">
             <ul>
                 <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
-                <li><a href="#">Wiki</a></li>
+                <li><a href="https://dt-muc.atlassian.net">Wiki</a></li>
                 <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
                 <li><a href="mailto:info@dt-muc.de">Email</a></li>
             </ul>
