real first version

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </ul>
             <hr>
             <div id="colophon">
-                <a href="#">Impressum</a> — Bild aus <a href="http://flic.kr/p/4krcoF">http://flic.kr/p/4krcoF</a>
+                <a href="#">Impressum</a> — Bild aus <a href="http://flic.kr/p/9DmpoY">http://flic.kr/p/9DmpoY</a>, leicht modifiziert
             </div>
         </div>
     </section>
