--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">13. Februar</span> 2014<br>
             <span class="important-info">19 Uhr</span><br>
-            Irgendwo in München
+            Irgendwo in München (TBA)
         </div>
     </section>
 
@@ -30,7 +30,7 @@
         </p>
 
         <p>
-            Das Ziel dieser Gruppe ist es, Menschen, die sich mit der Methode "<a
+            Das Ziel der Design Thinking München Gruppe ist es, Menschen, die sich mit der Methode "<a
                 href="http://de.wikipedia.org/wiki/Design_Thinking">Design Thinking</a>" auseinandersetzen wollen, in
             und um München regelmäßig zusammenzubringen, und einen persönlichen Erfahrungsaustausch zu etablieren. Dazu
             dienen neben den <a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppen</a>-Möglichkeiten
@@ -72,13 +72,14 @@
         <div id="footer-content">
             <ul>
                 <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
-                <li><a href="https://dt-muc.atlassian.net">Wiki</a></li>
+                <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
                 <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
                 <li><a href="mailto:info@dt-muc.de">Email</a></li>
             </ul>
             <hr>
             <div id="colophon">
-                <a href="#">Impressum</a> — Bild aus <a href="http://flic.kr/p/9DmpoY">http://flic.kr/p/9DmpoY</a>, leicht modifiziert
+                <a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Impressum">Impressum</a> — Bild aus <a
+                    href="http://flic.kr/p/9DmpoY">http://flic.kr/p/9DmpoY</a>, leicht modifiziert
             </div>
         </div>
     </section>
