add location for stammtisch

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Design Thinking München</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
@@ -20,7 +21,7 @@
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">13. Februar</span> 2014<br>
             <span class="important-info">19 Uhr</span><br>
-            Irgendwo in München (TBA)
+            <span class="important-info"><a href="http://www.sendlinger-augustiner.de/">Sendlinger Augustiner</a></span> <a class="map" href="http://goo.gl/maps/Gus15"><i class="fa fa-map-marker"></i></a>
         </div>
     </section>
 
