add attribution for font awesome

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <hr>
             <div id="colophon">
                 <a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Impressum">Impressum</a> — Bild aus <a
-                    href="http://flic.kr/p/9DmpoY">http://flic.kr/p/9DmpoY</a>, leicht modifiziert
+                    href="http://flic.kr/p/9DmpoY">Flickr</a>, leicht modifiziert — Icons aus <a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
             </div>
         </div>
     </section>
