add steffi's event

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             We are.
         </div>
         <div id="next-meetup">
-            Nächster <span class="important-info">Stammtisch</span><br>
-            <span class="important-info">13. Februar</span> 2014<br>
+            Nächstes <span class="important-info">Treffen</span><br>
+            <span class="important-info">Steffi Kieffer</span>, <a href="http://revelate.de">revelate.de</a><br>
+            <span class="important-info">Title TBA</span><br>
+            <span class="important-info">10. April</span> 2014<br>
             <span class="important-info">19 Uhr</span><br>
-            <span class="important-info"><a href="http://www.sendlinger-augustiner.de/">Sendlinger Augustiner</a></span> <a class="map" href="http://goo.gl/maps/Gus15"><i class="fa fa-map-marker"></i></a>
+            im Office von <span class="important-info"><a href="https://www.google.com/maps?q=STYLIGHT&sll=48.1501393,11.5473977&sspn=0.0054974,0.0109864&t=m&cid=0x66e3edd0a24507b0&hq=STYLIGHT&z=16">Stylight</a></span> <a class="map" href="https://www.google.com/maps?q=STYLIGHT&sll=48.1501393,11.5473977&sspn=0.0054974,0.0109864&t=m&cid=0x66e3edd0a24507b0&hq=STYLIGHT&z=16"><i class="fa fa-map-marker"></i></a>
         </div>
     </section>
 
