new google maps link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="important-info">Title TBA</span><br>
             <span class="important-info">10. April</span> 2014<br>
             <span class="important-info">19 Uhr</span><br>
-            im Office von <span class="important-info"><a href="https://www.google.com/maps?q=STYLIGHT&sll=48.1501393,11.5473977&sspn=0.0054974,0.0109864&t=m&cid=0x66e3edd0a24507b0&hq=STYLIGHT&z=16">Stylight</a></span> <a class="map" href="https://www.google.com/maps?q=STYLIGHT&sll=48.1501393,11.5473977&sspn=0.0054974,0.0109864&t=m&cid=0x66e3edd0a24507b0&hq=STYLIGHT&z=16"><i class="fa fa-map-marker"></i></a>
+            im Office von <span class="important-info"><a href="https://goo.gl/maps/YhXj0">Stylight</a></span> <a class="map" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
         </div>
     </section>
 
