--- a/index.html
+++ b/index.html
@@ -19,15 +19,38 @@
         </div>
         <div id="next-meetup">
             Nächstes <span class="important-info">Treffen</span><br>
-            <span class="important-info">Steffi Kieffer</span>, <a href="http://revelate.de">revelate.de</a><br>
-            <span class="important-info">Title TBA</span><br>
-            <span class="important-info">10. April</span> 2014<br>
-            <span class="important-info">19 Uhr</span><br>
-            im Office von <span class="important-info"><a href="https://goo.gl/maps/YhXj0">Stylight</a></span> <a class="map" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
+            <span class="important-info">Design <span style="text-decoration: line-through">Thinking</span> Doing</span><br>
+            <span class="important-info">Steffi Kieffer</span>, <a href="http://revelate.de">revelate</a><br>
+            <span class="important-info">19 Uhr, 10. April</span> 2014<br>
+            im Office von <span class="important-info"><a href="https://goo.gl/maps/YhXj0">Stylight</a></span><br>
+            <a class="icon-link" href="rsrc/dt-muc-5-treffen.ics"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
         </div>
     </section>
 
     <section id="description">
+        <p>
+            Im nächsten inhaltichen Treffen von Design Thinking München wird es einen Vortrag von Steffi Kieffer geben:
+        </p>
+
+        <div class="person">
+            <img src="avatar-steffi.png">
+
+            <div class="person-info">
+                <span class="important-info">Steffi Kieffer</span><br>
+                <a href="http://revelate.de">revelate</a><br>
+                <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
+                <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
+            </div>
+        </div>
+
+        <p>
+            Viele Menschen sprechen über die Schwierigkeiten, Design Thinking in ihren Unternehmen einzuführen. Aber ist
+            das nicht die falsche Frage? Die Welt braucht eigentlich kein Design Thinking, sondern Design Thinkers, und
+            dafür ist kein “top-down buy-in” nötig. Steffi zeigt uns, wie wir anfangen können, die Tools von Design
+            Thinking in unserem Arbeitsalltag zu integrieren.
+        </p>
+
         <p class="title">
             Hello, World!
         </p>
@@ -48,20 +71,20 @@
         </p>
 
         <div class="organisation">
-            <div class="organizer">
+            <div class="person">
                 <img src="avatar-gerhard.png">
 
-                <div class="organizer-info">
+                <div class="person-info">
                     <span class="important-info">Gerhard Müller</span><br>
                     <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
                     <a href="mailto:gerhard.mueller@tngtech.com">gerhard.mueller@tngtech.com</a><br>
                     <a href="https://twitter.com/gmtng">@gmtng</a>
                 </div>
             </div>
-            <div class="organizer">
+            <div class="person">
                 <img src="avatar-taewon.png">
 
-                <div class="organizer-info">
+                <div class="person-info">
                     <span class="important-info">Tae Won Ha</span><br>
                     <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
                     <a href="mailto:taewon.ha@tngtech.com">taewon.ha@tngtech.com</a><br>
@@ -82,7 +105,8 @@
             <hr>
             <div id="colophon">
                 <a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Impressum">Impressum</a> — Bild aus <a
-                    href="http://flic.kr/p/9DmpoY">Flickr</a>, leicht modifiziert — Icons aus <a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
+                    href="http://flic.kr/p/9DmpoY">Flickr</a>, leicht modifiziert — Icons aus <a
+                    href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
             </div>
         </div>
     </section>
