--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="description">
         <p>
-            Im nächsten inhaltichen Treffen von Design Thinking München wird es einen Vortrag von Steffi Kieffer geben:
+            Für das fünfte inhaltliche Treffen konnten wir Steffi Kieffer von revelate.de gewinnen:
         </p>
 
         <div class="person">
@@ -50,6 +50,11 @@
             dafür ist kein “top-down buy-in” nötig. Steffi zeigt uns, wie wir anfangen können, die Tools von Design
             Thinking in unserem Arbeitsalltag zu integrieren.
         </p>
+        <p>
+            Für Getränke und Essen ist gesorgt.
+        </p>
+
+        <hr>
 
         <p class="title">
             Hello, World!
