--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="next-meetup">
             Nächstes <span class="important-info">Treffen</span><br>
-            <span class="important-info">Design <span style="text-decoration: line-through">Thinking</span> Doing</span><br>
+            <span class="important-info">Design </span><span style="text-decoration: line-through">Thinking</span><span class="important-info"> Doing</span><br>
             <span class="important-info">Steffi Kieffer</span>, <a href="http://revelate.de">revelate</a><br>
             <span class="important-info">19 Uhr, 10. April</span> 2014<br>
             im Office von <span class="important-info"><a href="https://goo.gl/maps/YhXj0">Stylight</a></span><br>
