add link for revelate

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="description">
         <p>
-            Für das fünfte inhaltliche Treffen konnten wir Steffi Kieffer von revelate.de gewinnen:
+            Für das fünfte inhaltliche Treffen konnten wir Steffi Kieffer von <a href="http://revelate.de">revelate</a> gewinnen:
         </p>
 
         <div class="person">
