add title of the talk in the description part

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             Thinking<br>
             We are.
         </div>
+
         <div id="next-meetup">
             Nächstes <span class="important-info">Treffen</span><br>
             <span class="important-info">Design </span><span style="text-decoration: line-through">Thinking</span><span class="important-info"> Doing</span><br>
@@ -29,8 +30,13 @@
     </section>
 
     <section id="description">
-        <p>
-            Für das fünfte inhaltliche Treffen konnten wir Steffi Kieffer von <a href="http://revelate.de">revelate</a> gewinnen:
+
+        <p class="title">
+            Join Us
+        </p>
+
+        <p class="talk-title">
+            Design <span style="font-weight: normal; text-decoration: line-through">Thinking</span> Doing
         </p>
 
         <div class="person">
@@ -50,8 +56,15 @@
             dafür ist kein “top-down buy-in” nötig. Steffi zeigt uns, wie wir anfangen können, die Tools von Design
             Thinking in unserem Arbeitsalltag zu integrieren.
         </p>
+
         <p>
             Für Getränke und Essen ist gesorgt.
+        </p>
+
+        <p>
+            19 Uhr, 10. April 2014 im Office von <a href="https://goo.gl/maps/YhXj0">Stylight</a><br>
+            <a class="icon-link" href="rsrc/dt-muc-5-treffen.ics"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
         </p>
 
         <hr>
