move resources to rsrc folder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
 
         <div class="person">
-            <img src="avatar-steffi.png">
+            <img src="rsrc/avatar-steffi.png">
 
             <div class="person-info">
                 <span class="important-info">Steffi Kieffer</span><br>
@@ -90,7 +90,7 @@
 
         <div class="organisation">
             <div class="person">
-                <img src="avatar-gerhard.png">
+                <img src="rsrc/avatar-gerhard.png">
 
                 <div class="person-info">
                     <span class="important-info">Gerhard Müller</span><br>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="person">
-                <img src="avatar-taewon.png">
+                <img src="rsrc/avatar-taewon.png">
 
                 <div class="person-info">
                     <span class="important-info">Tae Won Ha</span><br>
