prepare for the next Stammtisch in May 2014

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
         </div>
 
         <div id="next-meetup">
-            Nächstes <span class="important-info">Treffen</span><br>
-            <span class="important-info">Design </span><span style="text-decoration: line-through">Thinking</span><span class="important-info"> Doing</span><br>
-            <span class="important-info">Steffi Kieffer</span>, <a href="http://revelate.de">revelate</a><br>
-            <span class="important-info">19 Uhr, 10. April</span> 2014<br>
-            im Office von <span class="important-info"><a href="https://goo.gl/maps/YhXj0">Stylight</a></span><br>
-            <a class="icon-link" href="rsrc/dt-muc-5-treffen.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
+            Nächster <span class="important-info">Stammtisch</span><br>
+            <span class="important-info">19 Uhr, 7. Mai</span> 2014<br>
+            <span class="important-info"><a href="#">Irgendwo in München</a></span><br>
+            <a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>
         </div>
     </section>
 
@@ -36,35 +34,18 @@
         </p>
 
         <p class="talk-title">
-            Design <span style="font-weight: normal; text-decoration: line-through">Thinking</span> Doing
-        </p>
-
-        <div class="person">
-            <img src="rsrc/avatar-steffi.png">
-
-            <div class="person-info">
-                <span class="important-info">Steffi Kieffer</span><br>
-                <a href="http://revelate.de">revelate</a><br>
-                <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
-                <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
-            </div>
-        </div>
-
-        <p>
-            Viele Menschen sprechen über die Schwierigkeiten, Design Thinking in ihren Unternehmen einzuführen. Aber ist
-            das nicht die falsche Frage? Die Welt braucht eigentlich kein Design Thinking, sondern Design Thinkers, und
-            dafür ist kein “top-down buy-in” nötig. Steffi zeigt uns, wie wir anfangen können, die Tools von Design
-            Thinking in unserem Arbeitsalltag zu integrieren.
+            Stammtisch Nr. 2
         </p>
 
         <p>
-            Für Getränke und Essen ist gesorgt.
+            Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
+            andere Themen unterhalten.
         </p>
 
         <p>
-            19 Uhr, 10. April 2014 im Office von <a href="https://goo.gl/maps/YhXj0">Stylight</a><br>
-            <a class="icon-link" href="rsrc/dt-muc-5-treffen.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
+            19 Uhr, 7. Mai 2014 irgendwo in München<br>
+            <a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>
         </p>
 
         <hr>
