- steffi in orga

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
         </div>
 
         <div id="next-meetup">
-            Nächstes <span class="important-info">Treffen</span><br>
+            Letzte <span class="important-info">Treffen</span><br>
             <span class="important-info">Design </span><span style="text-decoration: line-through">Thinking</span><span class="important-info"> Doing</span><br>
             <span class="important-info">Steffi Kieffer</span>, <a href="http://revelate.de">revelate</a><br>
-            <span class="important-info">19 Uhr, 10. April</span> 2014<br>
-            im Office von <span class="important-info"><a href="https://goo.gl/maps/YhXj0">Stylight</a></span><br>
-            <a class="icon-link" href="rsrc/dt-muc-5-treffen.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
+            <span class="important-info">10. April</span> 2014<br>
+            im Office von <span class="important-info"><a href="http://stylight.de">Stylight</a></span><br>
         </div>
     </section>
 
@@ -35,36 +33,19 @@
             Join Us
         </p>
 
+        <p>
+            Das letzte inhaltliche Treffen hat am 10. April 2014 im Office von <a href="Stylight">Stylight</a> mit einem Workshop von Steffi Kieffer stattgefunden.
+        </p>
+
         <p class="talk-title">
             Design <span style="font-weight: normal; text-decoration: line-through">Thinking</span> Doing
         </p>
-
-        <div class="person">
-            <img src="rsrc/avatar-steffi.png">
-
-            <div class="person-info">
-                <span class="important-info">Steffi Kieffer</span><br>
-                <a href="http://revelate.de">revelate</a><br>
-                <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
-                <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
-            </div>
-        </div>
 
         <p>
             Viele Menschen sprechen über die Schwierigkeiten, Design Thinking in ihren Unternehmen einzuführen. Aber ist
             das nicht die falsche Frage? Die Welt braucht eigentlich kein Design Thinking, sondern Design Thinkers, und
             dafür ist kein “top-down buy-in” nötig. Steffi zeigt uns, wie wir anfangen können, die Tools von Design
             Thinking in unserem Arbeitsalltag zu integrieren.
-        </p>
-
-        <p>
-            Für Getränke und Essen ist gesorgt.
-        </p>
-
-        <p>
-            19 Uhr, 10. April 2014 im Office von <a href="https://goo.gl/maps/YhXj0">Stylight</a><br>
-            <a class="icon-link" href="rsrc/dt-muc-5-treffen.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/YhXj0"><i class="fa fa-map-marker"></i></a>
         </p>
 
         <hr>
@@ -80,7 +61,7 @@
             dienen neben den <a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppen</a>-Möglichkeiten
             insbesondere der persönliche Erfahrungsaustausch, organisiert in informellen Treffen, Diskussion von
             Erfahrungsberichten und Case Studies bis hin zu Vorträge und Workshops. Diese werden auch über Twitter
-            <a href="https://twitter.com/dt_muc">@dt_muc</a> bekannt gegeben. Detaillierte Information über vergangene
+            <a href="https://twitter.com/dt_muc">@dt_muc</a> und <a href="https://www.facebook.com/groups/604862709598032/">Facebook</a> bekannt gegeben. Detaillierte Information über vergangene
             Veranstaltungen findet ihr in unserem <a href="https://dt-muc.atlassian.net">Wiki</a>.
         </p>
 
@@ -109,7 +90,18 @@
                     <a href="https://twitter.com/hataewon">@hataewon</a>
                 </div>
             </div>
+            <div class="person">
+                <img src="rsrc/avatar-steffi.png">
+
+                <div class="person-info">
+                    <span class="important-info">Steffi Kieffer</span><br>
+                    <a href="http://revelate.de">revelate</a><br>
+                    <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
+                    <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
+                </div>
+            </div>
         </div>
+
     </section>
 
     <section id="footer">
@@ -118,6 +110,7 @@
                 <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
                 <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
                 <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
+                <li><a href="https://www.facebook.com/groups/604862709598032/">Facebook</a></li>
                 <li><a href="mailto:info@dt-muc.de">Email</a></li>
             </ul>
             <hr>
