add next stammtisch

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div id="next-meetup">
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">19 Uhr, 7. Mai</span> 2014<br>
-            <span class="important-info"><a href="#">Irgendwo in München</a></span><br>
-            <a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>
+            <span class="important-info">Irgendwo in München</span><br>
+            <!--<a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>-->
+            <!--<a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>-->
         </div>
     </section>
 
@@ -34,7 +34,7 @@
         </p>
 
         <p class="talk-title">
-            Stammtisch Nr. 2
+            Stammtisch Mai 2014
         </p>
 
         <p>
@@ -43,9 +43,10 @@
         </p>
 
         <p>
-            19 Uhr, 7. Mai 2014 irgendwo in München<br>
-            <a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>
+            19 Uhr, 7. Mai 2014. Der Ort wird festgelegt, sobald wir wissen, wie viele ungefähr kommen.
+            <!--<br>-->
+            <!--<a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>-->
+            <!--<a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>-->
         </p>
 
         <hr>
@@ -61,7 +62,9 @@
             dienen neben den <a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppen</a>-Möglichkeiten
             insbesondere der persönliche Erfahrungsaustausch, organisiert in informellen Treffen, Diskussion von
             Erfahrungsberichten und Case Studies bis hin zu Vorträge und Workshops. Diese werden auch über Twitter
-            <a href="https://twitter.com/dt_muc">@dt_muc</a> bekannt gegeben. Detaillierte Information über vergangene
+            <a href="https://twitter.com/dt_muc">@dt_muc</a> und <a
+                href="https://www.facebook.com/groups/604862709598032/">Facebook</a> bekannt gegeben. Detaillierte
+            Information über vergangene
             Veranstaltungen findet ihr in unserem <a href="https://dt-muc.atlassian.net">Wiki</a>.
         </p>
 
@@ -90,15 +93,26 @@
                     <a href="https://twitter.com/hataewon">@hataewon</a>
                 </div>
             </div>
+            <div class="person">
+                <img src="rsrc/avatar-steffi.png">
+
+                <div class="person-info">
+                    <span class="important-info">Steffi Kieffer</span><br>
+                    <a href="http://revelate.de">revelate</a><br>
+                    <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
+                    <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="footer">
         <div id="footer-content">
             <ul>
-                <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
                 <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
+                <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
                 <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
+                <li><a href="https://www.facebook.com/groups/604862709598032/">Facebook</a></li>
                 <li><a href="mailto:info@dt-muc.de">Email</a></li>
             </ul>
             <hr>
