add detailed information for stammtisch 2

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div id="next-meetup">
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">19 Uhr, 7. Mai</span> 2014<br>
-            <span class="important-info">Irgendwo in München</span><br>
-            <!--<a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>-->
-            <!--<a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>-->
+            <span class="important-info"><a href="https://goo.gl/maps/4ykSU">Conti Bistro</a></span><br>
+            <a class="icon-link" href="rsrc/dt-muc-2-stammtisch.ics"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="https://goo.gl/maps/4ykSU"><i class="fa fa-map-marker"></i></a>
         </div>
     </section>
 
@@ -43,10 +43,10 @@
         </p>
 
         <p>
-            19 Uhr, 7. Mai 2014. Der Ort wird festgelegt, sobald wir wissen, wie viele ungefähr kommen.
-            <!--<br>-->
-            <!--<a class="icon-link" href="#"><i class="fa fa-calendar"></i></a>-->
-            <!--<a class="icon-link" href="#"><i class="fa fa-map-marker"></i></a>-->
+            19 Uhr, 7. Mai 2014 in <a href="https://goo.gl/maps/4ykSU">Conti Bistro</a>
+            <br>
+            <a class="icon-link" href="rsrc/dt-muc-2-stammtisch.ics"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="https://goo.gl/maps/4ykSU"><i class="fa fa-map-marker"></i></a>
         </p>
 
         <hr>
