add 6th meeting

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
 
         <div id="next-meetup">
-            Nächster <span class="important-info">Stammtisch</span><br>
-            <span class="important-info">19 Uhr, 7. Mai</span> 2014<br>
-            <span class="important-info"><a href="https://goo.gl/maps/4ykSU">Conti Bistro</a></span><br>
-            <a class="icon-link" href="rsrc/dt-muc-2-stammtisch.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/4ykSU"><i class="fa fa-map-marker"></i></a>
+            Nächstes <span class="important-info">Treffen</span><br>
+            <span class="important-info">19 Uhr, 4. Juni</span> 2014<br>
+            <span class="important-info"><a href="https://goo.gl/maps/Civ4C">AutoScout24</a></span><br>
+            <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a>
         </div>
     </section> 
 
@@ -34,19 +34,20 @@
         </p>
 
         <p class="talk-title">
-            Stammtisch Mai 2014
+            Werkzeugkasten für Design Thinking - Methoden für zielgerichtete Innovation
         </p>
 
         <p>
-            Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
-            andere Themen unterhalten.
+            Für das sechste inhaltliche Treffen konnten wir Dr. Stephan Raimer von <a href="http://oose.de">oose</a> gewinnen.<br>
+            Wir werden uns um 19 Uhr am 04. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in München treffen.<br>
+            Für Getränke und Essen ist gesorgt.
         </p>
 
         <p>
-            19 Uhr, 7. Mai 2014 in <a href="https://goo.gl/maps/4ykSU">Conti Bistro</a>
+            19 Uhr, 4. Juni 2014 in <a href="https://goo.gl/maps/Civ4C">AutoScout24</a>
             <br>
-            <a class="icon-link" href="rsrc/dt-muc-2-stammtisch.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/4ykSU"><i class="fa fa-map-marker"></i></a>
+            <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
+            <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a>
         </p>
 
         <hr>
