--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div id="next-meetup">
             Nächstes <span class="important-info">Treffen</span><br>
             <span class="important-info">19 Uhr, 4. Juni</span> 2014<br>
-            <span class="important-info"><a href="https://goo.gl/maps/Civ4C">AutoScout24</a></span><br>
+            <span class="important-info"><a href="https://goo.gl/maps/Civ4C">AutoScout24</a></span>, Turm D, 14. OG<br>
             <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
             <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a>
         </div>
-    </section> 
+    </section>
 
     <section id="description">
 
@@ -38,13 +38,18 @@
         </p>
 
         <p>
-            Für das sechste inhaltliche Treffen konnten wir Dr. Stephan Raimer von <a href="http://oose.de">oose</a> gewinnen.<br>
-            Wir werden uns um 19 Uhr am 04. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in München treffen.<br>
+            Für das sechste inhaltliche Treffen konnten wir Dr. Stephan Raimer von <a href="http://oose.de">oose</a>
+            gewinnen.<br>
+            Wir werden uns um 19 Uhr am 04. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in
+            München treffen.
+        </p>
+
+        <p>
             Für Getränke und Essen ist gesorgt.
         </p>
 
         <p>
-            19 Uhr, 4. Juni 2014 in <a href="https://goo.gl/maps/Civ4C">AutoScout24</a>
+            19 Uhr, 4. Juni 2014 in <a href="https://goo.gl/maps/Civ4C">AutoScout24</a>, Turm D, 14. OG
             <br>
             <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
             <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a>
