--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <div id="next-meetup">
             Nächstes <span class="important-info">Treffen</span><br>
+            <span class="important-info">Werkzeugkasten für DT</span><br>
             <span class="important-info">19 Uhr, 4. Juni</span> 2014<br>
             <span class="important-info"><a href="https://goo.gl/maps/Civ4C">AutoScout24</a></span>, Turm D, 14. OG<br>
             <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
@@ -34,13 +35,12 @@
         </p>
 
         <p class="talk-title">
-            Werkzeugkasten für Design Thinking - Methoden für zielgerichtete Innovation
+            Werkzeugkasten für Design Thinking - Methoden für zielgerichtete Innovation<br>
+            Dr. Stephan Raimer
         </p>
 
         <p>
-            Für das sechste inhaltliche Treffen konnten wir Dr. Stephan Raimer von <a href="http://oose.de">oose</a>
-            gewinnen.<br>
-            Wir werden uns um 19 Uhr am 04. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in
+            Wir werden uns um 19 Uhr am 4. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 (Turm D, 14. OG) in
             München treffen.
         </p>
 
