add an image of stephan

--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
 
         <p class="talk-title">
             Werkzeugkasten für Design Thinking - Methoden für zielgerichtete Innovation<br>
-            Dr. Stephan Raimer
         </p>
+
+        <div class="person">
+            <img src="rsrc/avatar-sra.jpg">
+
+            <div class="person-info">
+                <span class="important-info">Dr. Stephan Raimer</span><br>
+                <a href="http://www.oose.de">oose Innovative Informatik GmbH</a><br>
+                <a href="mailto:sra@oose.de">sra@oose.de</a><br>
+                <a href="http://www.dt-hh.de">www.dt-hh.de</a> | <a href="http://www.dtcamp.de">www.dtcamp.de</a>
+                <a href="https://twitter.com/dt_hh">@dt_hh</a>
+            </div>
+        </div>
 
         <p>
             Wir werden uns um 19 Uhr am 4. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 (Turm D, 14. OG) in
