--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
         </div>
 
         <div id="next-meetup">
-            Nächstes <span class="important-info">Treffen</span><br>
-            <span class="important-info">Werkzeugkasten für DT</span><br>
-            <span class="important-info">19 Uhr, 4. Juni</span> 2014<br>
-            <span class="important-info"><a href="https://goo.gl/maps/Civ4C">AutoScout24</a></span>, Turm D, 14. OG<br>
-            <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a>
+            Nächster <span class="important-info">Stammtisch</span><br>
+            <span class="important-info">19 Uhr, 9. Juli</span> 2014<br>
+            <span class="important-info">TBA</span>
         </div>
     </section>
 
@@ -34,36 +31,13 @@
             Join Us
         </p>
 
-        <p class="talk-title">
-            Werkzeugkasten für Design Thinking - Methoden für zielgerichtete Innovation<br>
-        </p>
-
-        <div class="person">
-            <img src="rsrc/avatar-sra.jpg">
-
-            <div class="person-info">
-                <span class="important-info">Dr. Stephan Raimer</span><br>
-                <a href="http://www.oose.de">oose Innovative Informatik GmbH</a><br>
-                <a href="mailto:sra@oose.de">sra@oose.de</a><br>
-                <a href="http://www.dt-hh.de">www.dt-hh.de</a> | <a href="http://www.dtcamp.de">www.dtcamp.de</a>
-                <a href="https://twitter.com/dt_hh">@dt_hh</a>
-            </div>
-        </div>
-
         <p>
-            Wir werden uns um 19 Uhr am 4. Juni 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 (Turm D, 14. OG) in
-            München treffen.
+            Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
+            andere Themen unterhalten.
         </p>
 
         <p>
-            Für Getränke und Essen ist gesorgt.
-        </p>
-
-        <p>
-            19 Uhr, 4. Juni 2014 in <a href="https://goo.gl/maps/Civ4C">AutoScout24</a>, Turm D, 14. OG
-            <br>
-            <a class="icon-link" href="rsrc/dt-muc-6-treffen.ics"><i class="fa fa-calendar"></i></a>
-            <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a>
+            Wir werden uns um 19 Uhr am 9. Juli 2014. Der Ort wird bald bekannt gegeben.
         </p>
 
         <hr>
