--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
 
         <p>
-            Wir werden uns um 19 Uhr am 9. Juli 2014. Der Ort wird bald bekannt gegeben.
+            Wir werden uns um 19 Uhr am 9. Juli 2014 treffen. Der Ort wird bald bekannt gegeben.
         </p>
 
         <hr>
