add location for stammtisch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="next-meetup">
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">19 Uhr, 9. Juli</span> 2014<br>
-            <span class="important-info">TBA</span>
+            <span class="important-info"><a href="http://www.augustiner-schützengarten.de">Augustiner Schützengarten</a></span>
         </div>
     </section>
 
@@ -37,7 +37,7 @@
         </p>
 
         <p>
-            Wir werden uns um 19 Uhr am 9. Juli 2014 treffen. Der Ort wird bald bekannt gegeben.
+            Wir werden uns um 19 Uhr am 9. Juli 2014 im <a href="http://www.augustiner-schützengarten.de">Augustiner Schützengarten</a> treffen.
         </p>
 
         <hr>
