--- a/index.html
+++ b/index.html
@@ -19,28 +19,13 @@
         </div>
 
         <div id="next-meetup">
-            Nächster <span class="important-info">Stammtisch</span><br>
-            <span class="important-info">19 Uhr, 9. Juli</span> 2014<br>
-            <span class="important-info"><a href="http://www.augustiner-schützengarten.de">Augustiner Schützengarten</a></span>
+            <span class="important-info">Sommerpause</span><br>
+            bis Ende August, 2014<br>
+            Wir melden uns<br>im September 2014<br>wieder!
         </div>
     </section>
 
     <section id="description">
-
-        <p class="title">
-            Join Us
-        </p>
-
-        <p>
-            Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
-            andere Themen unterhalten.
-        </p>
-
-        <p>
-            Wir werden uns um 19 Uhr am 9. Juli 2014 im <a href="http://www.augustiner-schützengarten.de">Augustiner Schützengarten</a> treffen.
-        </p>
-
-        <hr>
 
         <p class="title">
             Hello, World!
