--- a/index.html
+++ b/index.html
@@ -1,104 +1,125 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Design Thinking München</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Design Thinking München</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
 <div id="container">
 
-    <section id="splash">
-        <div id="statement">
-            In München<br>
-            Design<br>
-            Thinking<br>
-            We are.
+  <section id="splash">
+    <div id="statement">
+      In München<br>
+      Design<br>
+      Thinking<br>
+      We are.
+    </div>
+
+    <div id="next-meetup">
+      Nächstes <span class="important-info">Treffen</span><br>
+      <span class="important-info">Methoden-Workshop</span><br>
+      <span class="important-info">19 Uhr, 1. Oktober</span> 2014<br>
+      <span class="important-info">Creative Hall, <a href="http://www.sce.de">SCE</a></span>
+      <a class="icon-link" href="https://goo.gl/maps/K3HAr"><i class="fa fa-map-marker"></i></a>
+    </div>
+  </section>
+
+  <section id="description">
+    <p class="title">
+      Join Us
+    </p>
+
+    <p class="talk-title">
+      Design Thinking Workshop am SCE<br>
+    </p>
+    <p>
+      Florian Huber, Ebru Turgut-Dao und Annika Müller:
+      <a href="rsrc/dt-workshop-sce-20101001.pdf">Detaillierte Information</a>
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 1. Oktober 2014 in Creative Hall bei SCE in Heßstr. 89 treffen.
+    </p>
+
+    <p>
+      Für Getränke und Essen ist gesorgt.
+    </p>
+
+    <p class="title">
+      Hello, World!
+    </p>
+
+    <p>
+      Das Ziel der Design Thinking München Gruppe ist es, Menschen, die sich mit der Methode "<a
+        href="http://de.wikipedia.org/wiki/Design_Thinking">Design Thinking</a>" auseinandersetzen wollen, in
+      und um München regelmäßig zusammenzubringen, und einen persönlichen Erfahrungsaustausch zu etablieren. Dazu
+      dienen neben den <a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppen</a>-Möglichkeiten
+      insbesondere der persönliche Erfahrungsaustausch, organisiert in informellen Treffen, Diskussion von
+      Erfahrungsberichten und Case Studies bis hin zu Vorträge und Workshops. Diese werden auch über Twitter
+      <a href="https://twitter.com/dt_muc">@dt_muc</a> und <a
+        href="https://www.facebook.com/groups/604862709598032/">Facebook</a> bekannt gegeben. Detaillierte
+      Information über vergangene
+      Veranstaltungen findet ihr in unserem <a href="https://dt-muc.atlassian.net">Wiki</a>.
+    </p>
+
+    <p class="organisation">
+      Die Design Thinking München Gruppe wird organisiert von
+    </p>
+
+    <div class="organisation">
+      <div class="person">
+        <img src="rsrc/avatar-gerhard.png">
+
+        <div class="person-info">
+          <span class="important-info">Gerhard Müller</span><br>
+          <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
+          <a href="mailto:gerhard.mueller@tngtech.com">gerhard.mueller@tngtech.com</a><br>
+          <a href="https://twitter.com/gmtng">@gmtng</a>
         </div>
+      </div>
+      <div class="person">
+        <img src="rsrc/avatar-taewon.png">
 
-        <div id="next-meetup">
-            <span class="important-info">Sommerpause</span><br>
-            bis Ende August, 2014<br>
-            Wir melden uns<br>im September 2014<br>wieder!
+        <div class="person-info">
+          <span class="important-info">Tae Won Ha</span><br>
+          <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
+          <a href="mailto:taewon.ha@tngtech.com">taewon.ha@tngtech.com</a><br>
+          <a href="https://twitter.com/hataewon">@hataewon</a>
         </div>
-    </section>
+      </div>
+      <div class="person">
+        <img src="rsrc/avatar-steffi.png">
 
-    <section id="description">
-
-        <p class="title">
-            Hello, World!
-        </p>
-
-        <p>
-            Das Ziel der Design Thinking München Gruppe ist es, Menschen, die sich mit der Methode "<a
-                href="http://de.wikipedia.org/wiki/Design_Thinking">Design Thinking</a>" auseinandersetzen wollen, in
-            und um München regelmäßig zusammenzubringen, und einen persönlichen Erfahrungsaustausch zu etablieren. Dazu
-            dienen neben den <a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppen</a>-Möglichkeiten
-            insbesondere der persönliche Erfahrungsaustausch, organisiert in informellen Treffen, Diskussion von
-            Erfahrungsberichten und Case Studies bis hin zu Vorträge und Workshops. Diese werden auch über Twitter
-            <a href="https://twitter.com/dt_muc">@dt_muc</a> und <a
-                href="https://www.facebook.com/groups/604862709598032/">Facebook</a> bekannt gegeben. Detaillierte
-            Information über vergangene
-            Veranstaltungen findet ihr in unserem <a href="https://dt-muc.atlassian.net">Wiki</a>.
-        </p>
-
-        <p class="organisation">
-            Die Design Thinking München Gruppe wird organisiert von
-        </p>
-
-        <div class="organisation">
-            <div class="person">
-                <img src="rsrc/avatar-gerhard.png">
-
-                <div class="person-info">
-                    <span class="important-info">Gerhard Müller</span><br>
-                    <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
-                    <a href="mailto:gerhard.mueller@tngtech.com">gerhard.mueller@tngtech.com</a><br>
-                    <a href="https://twitter.com/gmtng">@gmtng</a>
-                </div>
-            </div>
-            <div class="person">
-                <img src="rsrc/avatar-taewon.png">
-
-                <div class="person-info">
-                    <span class="important-info">Tae Won Ha</span><br>
-                    <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
-                    <a href="mailto:taewon.ha@tngtech.com">taewon.ha@tngtech.com</a><br>
-                    <a href="https://twitter.com/hataewon">@hataewon</a>
-                </div>
-            </div>
-            <div class="person">
-                <img src="rsrc/avatar-steffi.png">
-
-                <div class="person-info">
-                    <span class="important-info">Steffi Kieffer</span><br>
-                    <a href="http://revelate.de">revelate</a><br>
-                    <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
-                    <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
-                </div>
-            </div>
+        <div class="person-info">
+          <span class="important-info">Steffi Kieffer</span><br>
+          <a href="http://revelate.de">revelate</a><br>
+          <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
+          <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <section id="footer">
-        <div id="footer-content">
-            <ul>
-                <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
-                <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
-                <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
-                <li><a href="https://www.facebook.com/groups/604862709598032/">Facebook</a></li>
-                <li><a href="mailto:info@dt-muc.de">Email</a></li>
-            </ul>
-            <hr>
-            <div id="colophon">
-                <a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Impressum">Impressum</a> — Bild aus <a
-                    href="http://flic.kr/p/9DmpoY">Flickr</a>, leicht modifiziert — Icons aus <a
-                    href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
-            </div>
-        </div>
-    </section>
+  <section id="footer">
+    <div id="footer-content">
+      <ul>
+        <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
+        <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
+        <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
+        <li><a href="https://www.facebook.com/groups/604862709598032/">Facebook</a></li>
+        <li><a href="mailto:info@dt-muc.de">Email</a></li>
+      </ul>
+      <hr>
+      <div id="colophon">
+        <a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Impressum">Impressum</a> — Bild aus <a
+          href="http://flic.kr/p/9DmpoY">Flickr</a>, leicht modifiziert — Icons aus <a
+          href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
+      </div>
+    </div>
+  </section>
 
 </div>
 
