prepare for the next workshop

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <div id="next-meetup">
       Nächstes <span class="important-info">Treffen</span><br>
-      <span class="important-info">Methoden-Workshop</span><br>
-      <span class="important-info">19 Uhr, 1. Oktober</span> 2014<br>
-      <span class="important-info">Creative Hall, <a href="http://www.sce.de">SCE</a></span>
-      <a class="icon-link" href="https://goo.gl/maps/K3HAr"><i class="fa fa-map-marker"></i></a>
+      <span class="important-info">Design Thinking Workshop</span><br>
+      <span class="important-info">19 Uhr, 13. Nov.</span> 2014<br>
+      <span class="important-info">TBA</span>
+      <!--<a class="icon-link" href="https://goo.gl/maps/K3HAr"><i class="fa fa-map-marker"></i></a>-->
     </div>
   </section>
 
@@ -33,20 +33,19 @@
     </p>
 
     <p class="talk-title">
-      Design Thinking Workshop am SCE<br>
+      Design Thinking Workshop mit Godehard Gerling<br>
     </p>
     <p>
-      Florian Huber, Ebru Turgut-Dao und Annika Müller:
-      <a href="rsrc/dt-workshop-sce-20101001.pdf">Detaillierte Information</a>
+      Detaillierte Information: TBA
     </p>
 
     <p>
-      Wir werden uns um 19 Uhr am 1. Oktober 2014 in Creative Hall bei SCE in Heßstr. 89 treffen.
+      Wir werden uns um 19 Uhr am 13. November 2014 treffen. Der Ort wird bald bekannt gegeben.
     </p>
 
-    <p>
-      Für Getränke und Essen ist gesorgt.
-    </p>
+    <!--<p>-->
+      <!--Für Getränke und Essen ist gesorgt.-->
+    <!--</p>-->
 
     <p class="title">
       Hello, World!
