prepare for the next workshop

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
       Nächstes <span class="important-info">Treffen</span><br>
       <span class="important-info">Design Thinking Workshop</span><br>
       <span class="important-info">19 Uhr, 13. Nov.</span> 2014<br>
-      <span class="important-info">TBA</span>
-      <!--<a class="icon-link" href="https://goo.gl/maps/K3HAr"><i class="fa fa-map-marker"></i></a>-->
+      <span class="important-info">AutoScout24</span>, München
+      <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info"><a
+          href="http://www.eventbrite.com/e/design-thinking-workshop-mit-godehard-gerling-tickets-13873364607?utm_campaign=new_eventv2&utm_medium=email&utm_source=eb_email&utm_term=eventurl_text">Registrieren</a></span>
     </div>
   </section>
 
@@ -35,17 +37,19 @@
     <p class="talk-title">
       Design Thinking Workshop mit Godehard Gerling<br>
     </p>
+
     <p>
-      Detaillierte Information: TBA
+      Die Teilnehmerzahl ist diesmal auf 30 begrenzt. Bitte registriert euch via <a href="http://www.eventbrite.com/e/design-thinking-workshop-mit-godehard-gerling-tickets-13873364607?utm_campaign=new_eventv2&utm_medium=email&utm_source=eb_email&utm_term=eventurl_text">Eventbrite</a>.
     </p>
 
     <p>
-      Wir werden uns um 19 Uhr am 13. November 2014 treffen. Der Ort wird bald bekannt gegeben.
+      Wir werden uns um 19 Uhr am 13. November 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in
+      München treffen.
     </p>
 
-    <!--<p>-->
-      <!--Für Getränke und Essen ist gesorgt.-->
-    <!--</p>-->
+    <p>
+    Für Getränke und Essen ist gesorgt.
+    </p>
 
     <p class="title">
       Hello, World!
